2011-12-09 Pierre Wieser <pwieser@trychlos.org>

	* src/io-desktop/nadp-desktop-file.c:
	* src/io-desktop/nadp-desktop-file.h (nadp_desktop_file_has_profile):
	New function.

	* src/io-desktop/nadp-reader.c
	(item_from_desktop_path):
	Replace the warning with an error message to be returned to the caller.
	(read_done_action_read_profiles):
	Attach at least a default profile to the action.
	(read_done_action_load_profile):
	Define a default profile if not found in .desktop file.

	* src/core/na-icontext-factory.c: Fix mimetypes and schemes default values.

	* src/core/na-icontext.c (is_compatible_scheme): Fix scheme test.

2011-12-06 Pierre Wieser <pwieser@trychlos.org>

	* src/utils/na-gconf2key.sh.in:
	Fix permissions when creating the configuration directory.

	* src/core/na-settings.c (settings_new):
	* src/io-desktop/nadp-writer.c
	(nadp_iio_provider_is_able_to_write, nadp_iio_provider_write_item):
	Fix permissions when creating the configuration directory.

	* src/api/na-core-utils.h:
	* src/core/na-core-utils.c (na_core_utils_dir_list_perms): New function.

	* src/nact/nact-tree-model-dnd.c (drop_uri_list):
	Fix and improve error messages during drop operations.

	Fix a coredump when trying to import an empty file by DnD.
	Extend the fix by checking the size and the type of the candidate.

	* src/api/na-core-utils.h:
	* src/core/na-core-utils.c (na_core_utils_file_is_loadable): New function.

	* src/api/na-iimporter.h (IMPORTER_CODE_NOT_LOADABLE): New return code.

	* src/core/na-importer.c (import_from_uri):
	Do not try other modules one the first detects that a file is not loadable.

	* src/io-desktop/nadp-desktop-file.c (nadp_desktop_file_new_from_uri):
	* src/io-desktop/nadp-reader.c (nadp_reader_iimporter_import_from_uri):
	* src/io-xml/naxml-reader.c (naxml_reader_import_from_uri):
	Check whether the file is loadable before trying to import it.

	* src/nact/nact-main-tab.h:
	* src/nact/nact-main-window.h: Fix comments.
